[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omsflow"
version = "0.1.0"
description = "Financial Order Management System Framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "OMSFlow Team" }
]
dependencies = [
    "requests>=2.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "quickfix>=1.15.1",
    "phoenix-api>=1.0.0",
    "futu-api>=5.0.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.284",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py312" 